kubernetes/networking/headscale/ingress/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tailscale-redirect
  namespace: networking
spec:
  redirectRegex:
    regex: ^https://tailscale\.chamburr.xyz/?$
    replacement: https://tailscale.chamburr.xyz/admin/
